--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,3 +1,5 @@
-@import "./desk/desk.scss";
-@import "./adaptive/adaptive.scss" ;
+@import "./fonts.scss";
+@import "./desk.scss";
+@import "./adaptive.scss" ;
+
 
