--- a/app/css/adaptive.css
+++ b/app/css/adaptive.css
@@ -1,4 +1,9 @@
 @media (max-width: 768px) {
+  header .navigation__logo-mobile {
+    display: block;
+    position: absolute;
+    top: 15px;
+    left: 10px; }
   .navigation {
     margin: 0px;
     width: 200px;
