--- a/app/css/desk.css
+++ b/app/css/desk.css
@@ -14,6 +14,7 @@ body {
   padding-right: 10px; }
 
 header {
+  padding-top: 300px;
   height: 1068px;
   color: #fff;
   background-image: url("./../img/header-background.png");
@@ -21,6 +22,11 @@ header {
   background-size: cover;
   background-position: center bottom;
   position: relative; }
+
+.navigation__logo-mobile {
+  display: none;
+  width: 110px;
+  height: 28px; }
 
 .navigation {
   width: 100%;
@@ -89,5 +95,48 @@ header {
     height: 2px;
     background-color: white; }
 
-.test__content {
-  padding-top: 150px; }
+.header__slider {
+  max-width: 1380px;
+  margin: 0 auto; }
+  .header__slider .header__slider-section {
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    outline: none; }
+    .header__slider .header__slider-section h2, .header__slider .header__slider-section h1 {
+      font-family: "Raleway";
+      font-weight: 100;
+      font-size: 60px;
+      margin: 0px; }
+    .header__slider .header__slider-section span {
+      font-family: "Proxima-Nova";
+      font-weight: 300;
+      font-size: 24px;
+      margin-top: 30px;
+      margin-bottom: 60px; }
+    .header__slider .header__slider-section a {
+      font-family: "Raleway";
+      font-weight: 700;
+      font-size: 14px;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 180px;
+      height: 50px;
+      border: 2px solid #fff;
+      border-radius: 50px;
+      outline: none;
+      color: #fff; }
+
+.header__slider.slick-slider {
+  height: 400px; }
+
+.slick-list {
+  overflow: hidden; }
+
+.slick-track {
+  display: flex;
+  overflow: hidden; }
