--- a/app/scss/desk.scss
+++ b/app/scss/desk.scss
@@ -18,6 +18,7 @@ body {
 
 
 header {
+    padding-top: 300px;
     height: 1068px;
     color: #fff;
     background-image: url("./../img/header-background.png");
@@ -27,6 +28,11 @@ header {
     position: relative;
 }
 
+.navigation__logo-mobile {
+    display: none;
+    width: 110px;
+    height: 28px;
+}
 
 .navigation {
     width: 100%;
@@ -113,6 +119,65 @@ header {
     }
 }
 
-.test__content{
-    padding-top: 150px;
+.header__slider {
+    max-width: 1380px;
+    margin: 0 auto;
+
+    .header__slider-section {
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        outline: none;
+    
+        h2,h1{
+            font-family: "Raleway";
+            font-weight: 100;
+            font-size: 60px;
+            margin: 0px;
+        }
+
+        span {
+            font-family: "Proxima-Nova";
+            font-weight: 300;
+            font-size: 24px;
+            margin-top: 30px;
+            margin-bottom: 60px;
+        }
+
+        a {
+            font-family: "Raleway";
+            font-weight: 700;
+            font-size: 14px;
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 180px;
+            height: 50px;
+            border: 2px solid #fff;
+            border-radius: 50px;
+            outline: none;
+            color: #fff;
+        }
+    
+    }
 }
+
+.header__slider.slick-slider {
+    
+    height: 400px;
+}
+
+.slick-list{
+    overflow: hidden;
+}
+
+.slick-track {
+    display: flex;
+    overflow: hidden;
+}
+
+
+
