--- a/app/scss/adaptive.scss
+++ b/app/scss/adaptive.scss
@@ -59,14 +59,18 @@
         &::before{
             transition-duration: 300ms;
             transform: rotate(45deg);
-            top:50%;
+            transform-origin: bottom left;
+            left: 0px;
+            top: 5px;
         }
 
         &::after{
             
             transition-duration: 300ms;
-            top:50%;
+            transform-origin: bottom left;
             transform: rotate(-45deg);
+            left: 0px;
+            bottom: 5px;
             
         }
 
