--- a/app/css/desk.css
+++ b/app/css/desk.css
@@ -22,6 +22,36 @@ header {
   background-size: cover;
   background-position: center bottom;
   position: relative; }
+  header .header__button {
+    position: absolute;
+    bottom: 60px;
+    left: 50%;
+    width: 32px;
+    height: 16px;
+    transform: translate(-50%, 0);
+    outline: none;
+    border: none;
+    background-color: transparent; }
+    header .header__button::before {
+      content: "";
+      width: 23px;
+      height: 1px;
+      background-color: white;
+      position: absolute;
+      bottom: 0px;
+      left: 50%;
+      transform: rotate(-45deg);
+      transform-origin: bottom left; }
+    header .header__button::after {
+      content: "";
+      width: 23px;
+      height: 1px;
+      background-color: white;
+      position: absolute;
+      bottom: 0px;
+      right: 50%;
+      transform: rotate(45deg);
+      transform-origin: bottom right; }
 
 .navigation__logo-mobile {
   display: none;
@@ -65,7 +95,7 @@ header {
   position: absolute;
   padding: 0px;
   top: 10px;
-  right: 5px;
+  right: 10px;
   width: 40px;
   height: 40px;
   outline: none;
@@ -75,8 +105,8 @@ header {
     content: "";
     display: block;
     position: absolute;
-    top: 6px;
-    width: 34px;
+    top: 0px;
+    width: 40px;
     height: 2px;
     background-color: white;
     transition-duration: 300ms; }
@@ -84,14 +114,14 @@ header {
     content: "";
     display: block;
     position: absolute;
-    bottom: 6px;
-    width: 34px;
+    bottom: 0px;
+    width: 40px;
     height: 2px;
     background-color: white;
     transition-duration: 300ms; }
   .navigation__toggle span {
     display: block;
-    width: 34px;
+    width: 40px;
     height: 2px;
     background-color: white; }
 
