--- a/app/scss/desk.scss
+++ b/app/scss/desk.scss
@@ -11,6 +11,7 @@ body {
 
 .content {
     margin: 0 auto;
+    width: 100%;
     max-width: 1500px;
     padding-left: 10px;
     padding-right: 10px;
@@ -37,6 +38,7 @@ header {
         outline: none;
         border: none;
         background-color: transparent;
+        cursor: pointer;
 
 
         &::before {
@@ -180,6 +182,7 @@ header {
         background-color: transparent;
         border: none;
         outline: none;
+        cursor: pointer;
 
         &::before {
             content: "";
@@ -230,6 +233,7 @@ header {
         background-color: transparent;
         border: none;
         outline: none;
+        cursor: pointer;
 
         &::before {
             content: "";
@@ -282,7 +286,6 @@ header {
                 outline: none;
                 background-color: transparent;
             }
-
         }
 
         .slick-active {
@@ -334,10 +337,116 @@ header {
             outline: none;
             color: #fff;
         }
-    
     }
 }
 
+.about {
+    padding-top: 110px;
+    padding-bottom: 110px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    .about__title {
+        font-family: "Raleway";
+        font-weight: 200;
+        font-size: 60px;
+        color: #576671;
+        margin: 0px;
+        padding-bottom: 37px;
+        position: relative;
+
+        &::after {
+            content: "";
+            position: absolute;
+            width: 30px;
+            height: 1px;
+            background-color: #17daa3;
+            bottom: 0px;
+            left: 50%;
+            transform: translate(-50%, 0);
+        } 
+    }
+
+    .about__subtitle {
+        font-family: "Proxima-Nova";
+        font-weight: 400;
+        font-size: 18px;
+        color: #87949e;
+        margin: 0px;
+        margin-top: 37px;
+    }
+
+    .about__more {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 185px;
+        height: 50px;
+        background-color: #17daa3;
+        border-radius: 25px;
+        font-family: "Raleway";
+        font-weight: 700;
+        font-size: 14px;
+        color: #fff;
+        text-decoration: none;
+
+    }
+}
+
+.about__holder {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 150px;
+    margin-bottom: 100px;
+
+    .about__section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .about__inner {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 180px;
+            height: 180px;
+            border-radius: 50%;
+            background-color: #edeff1;
+            transition: 500ms;
+
+            &:hover {
+                background-color: #17daa3;
+
+                svg {
+                    fill: #fff;
+                }
+            }
+
+            svg {
+                fill: #87949e;
+                transition: 500ms;
+            }
+        }
+
+        h3 {
+            margin-top: 80px;
+            margin-bottom: 45px;
+            font-family: "Raleway";
+            font-weight: 400;
+            font-size: 30px;
+        }
+
+        p {
+            margin: 0px;
+            padding-left: 10px;
+            padding-right: 10px;
+            max-width: 300px;
+            text-align: center;
+            color: #87949e;
+        }
+    }
+}
 
 
 
