--- a/app/css/desk.css
+++ b/app/css/desk.css
@@ -210,6 +210,8 @@ header {
       position: absolute;
       top: 50%;
       right: 0px; }
+  .header__slider .slick-arrow {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
   .header__slider .slick-dots {
     display: flex;
     justify-content: center;
@@ -262,7 +264,8 @@ header {
       border: 2px solid #fff;
       border-radius: 50px;
       outline: none;
-      color: #fff; }
+      color: #fff;
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
 .about {
   padding-top: 110px;
@@ -355,9 +358,7 @@ header {
   padding-bottom: 160px; }
   .camera .camera__img {
     width: 50%;
-    max-width: 740px;
-    display: flex;
-    align-items: center; }
+    max-width: 740px; }
     .camera .camera__img img {
       width: 100%;
       object-fit: cover; }
@@ -394,3 +395,49 @@ header {
       font-size: 14px;
       color: #fff;
       text-decoration: none; }
+
+.laptop {
+  display: flex;
+  justify-content: center;
+  padding-top: 160px;
+  padding-bottom: 160px; }
+  .laptop .laptop__content {
+    width: 50%;
+    max-width: 740px; }
+    .laptop .laptop__content h2 {
+      font-family: "Raleway";
+      font-weight: 200;
+      font-size: 60px;
+      color: #576671;
+      margin: 0px;
+      margin-bottom: 60px; }
+    .laptop .laptop__content p {
+      font-family: "Proxima-Nova";
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 36px;
+      color: #87949e;
+      padding-right: 10px;
+      margin: 0px;
+      max-width: 720px; }
+    .laptop .laptop__content .laptop__more {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 70px;
+      width: 185px;
+      height: 50px;
+      background-color: #17daa3;
+      border-radius: 25px;
+      font-family: "Raleway";
+      font-weight: 700;
+      font-size: 14px;
+      color: #fff;
+      text-decoration: none; }
+  .laptop .laptop__img {
+    width: 50%;
+    max-width: 740px;
+    display: flex;
+    justify-content: center; }
+    .laptop .laptop__img img {
+      height: auto; }
