--- a/app/css/desk.css
+++ b/app/css/desk.css
@@ -111,7 +111,8 @@ header {
     width: 40px;
     height: 2px;
     background-color: white;
-    transition-duration: 300ms; }
+    transition-duration: 300ms;
+    border: 1px solid black; }
   .navigation__toggle::after {
     content: "";
     display: block;
@@ -120,12 +121,14 @@ header {
     width: 40px;
     height: 2px;
     background-color: white;
-    transition-duration: 300ms; }
+    transition-duration: 300ms;
+    border: 1px solid black; }
   .navigation__toggle span {
-    display: block;
+    display: inline-block;
     width: 40px;
-    height: 2px;
-    background-color: white; }
+    height: 4px;
+    background-color: white;
+    border: 1px solid black; }
 
 .header__slider {
   max-width: 1380px;
@@ -493,7 +496,8 @@ header {
         .worker .worker__slider .slick-list .slick-track .worker__section {
           display: flex;
           flex-direction: column;
-          align-items: center; }
+          align-items: center;
+          outline: none; }
           .worker .worker__slider .slick-list .slick-track .worker__section img {
             width: 104px;
             height: 104px; }
