--- a/app/css/style.css
+++ b/app/css/style.css
@@ -221,7 +221,8 @@ header {
     width: 40px;
     height: 2px;
     background-color: white;
-    transition-duration: 300ms; }
+    transition-duration: 300ms;
+    border: 1px solid black; }
   .navigation__toggle::after {
     content: "";
     display: block;
@@ -230,12 +231,14 @@ header {
     width: 40px;
     height: 2px;
     background-color: white;
-    transition-duration: 300ms; }
+    transition-duration: 300ms;
+    border: 1px solid black; }
   .navigation__toggle span {
-    display: block;
+    display: inline-block;
     width: 40px;
-    height: 2px;
-    background-color: white; }
+    height: 4px;
+    background-color: white;
+    border: 1px solid black; }
 
 .header__slider {
   max-width: 1380px;
@@ -603,7 +606,8 @@ header {
         .worker .worker__slider .slick-list .slick-track .worker__section {
           display: flex;
           flex-direction: column;
-          align-items: center; }
+          align-items: center;
+          outline: none; }
           .worker .worker__slider .slick-list .slick-track .worker__section img {
             width: 104px;
             height: 104px; }
@@ -728,13 +732,15 @@ header {
     transform: rotate(45deg);
     transform-origin: bottom left;
     left: 0px;
-    top: 5px; }
+    top: 5px;
+    border: none; }
   .toggle-active::after {
     transition-duration: 300ms;
     transform-origin: bottom left;
     transform: rotate(-45deg);
     left: 0px;
-    bottom: 5px; }
+    bottom: 5px;
+    border: none; }
   .toggle-active span {
     display: none; }
   .test__content {
