--- a/app/scss/adaptive.scss
+++ b/app/scss/adaptive.scss
@@ -62,6 +62,7 @@
             transform-origin: bottom left;
             left: 0px;
             top: 5px;
+            border:none;
         }
 
         &::after{
@@ -71,6 +72,7 @@
             transform: rotate(-45deg);
             left: 0px;
             bottom: 5px;
+            border:none;
             
         }
 
