--- a/app/css/style.css
+++ b/app/css/style.css
@@ -111,11 +111,19 @@
 * {
   box-sizing: border-box; }
 
+html {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden; }
+
 body {
   font-family: "Proxima-Nova";
   font-weight: 400;
   padding: 0px;
-  margin: 0px; }
+  margin: 0px;
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden; }
 
 .content {
   margin: 0 auto;
@@ -515,6 +523,7 @@ header {
   padding-top: 160px;
   padding-bottom: 160px; }
   .laptop .laptop__content {
+    padding-left: 10px;
     width: 50%;
     max-width: 740px; }
     .laptop .laptop__content h2 {
@@ -558,6 +567,9 @@ header {
 .worker {
   padding-top: 190px;
   padding-bottom: 280px;
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
   background-image: url(../img/poaple-backgraund.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -568,7 +580,7 @@ header {
       font-size: 0px;
       position: absolute;
       top: 50%;
-      left: 0px;
+      left: 20px;
       margin: 0px;
       padding: 0px;
       width: 30px;
@@ -632,7 +644,7 @@ header {
       font-size: 0px;
       position: absolute;
       top: 50%;
-      right: 0px;
+      right: 20px;
       margin: 0px;
       padding: 0px;
       width: 30px;
@@ -692,6 +704,74 @@ header {
           background-color: transparent; }
       .worker .worker__slider .slick-dots .slick-active button {
         background-color: #fff; }
+
+.section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f9f9fa;
+  padding-top: 100px;
+  padding-bottom: 150px; }
+  .section h2 {
+    font-family: "Raleway";
+    font-weight: 200;
+    font-size: 60px;
+    color: #576671;
+    padding-bottom: 37px;
+    margin-bottom: 37px;
+    position: relative; }
+    .section h2::after {
+      content: "";
+      position: absolute;
+      width: 30px;
+      height: 1px;
+      background-color: #17daa3;
+      bottom: 0px;
+      left: 50%;
+      transform: translate(-50%, 0); }
+  .section p {
+    font-family: "Proxima-Nova";
+    font-weight: 400;
+    font-size: 18px;
+    color: #87949e;
+    margin: 0px; }
+  .section .section__inner {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 130px; }
+    .section .section__inner .section__content {
+      max-width: 700px;
+      width: 50%;
+      min-width: 500px;
+      padding-left: 150px;
+      margin-top: 40px;
+      margin-bottom: 40px;
+      position: relative; }
+      .section .section__inner .section__content svg {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 94px;
+        height: 94px; }
+        .section .section__inner .section__content svg .cls-1 {
+          fill: #fff; }
+        .section .section__inner .section__content svg .cls-2 {
+          fill: #17daa3; }
+      .section .section__inner .section__content h3 {
+        font-family: "Raleway";
+        font-weight: 200;
+        font-size: 60px;
+        margin-top: 10px;
+        margin-bottom: 43px;
+        color: #576671; }
+      .section .section__inner .section__content p {
+        font-family: "Proxima-Nova";
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 48px;
+        color: #87949e;
+        padding-left: 10px; }
 
 @media (max-width: 768px) {
   header .navigation__logo-mobile {
