--- a/app/scss/desk.scss
+++ b/app/scss/desk.scss
@@ -1,12 +1,20 @@
 *{
     box-sizing: border-box;
 }
+html{
 
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+}
 body {
     font-family: "Proxima-Nova";
     font-weight: 400;
     padding: 0px;
     margin: 0px;
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .content {
@@ -526,6 +534,7 @@ header {
     padding-bottom: 160px;
 
     .laptop__content {
+        padding-left: 10px;
         width: 50%;
         max-width: 740px;
 
@@ -583,6 +592,9 @@ header {
 .worker {
     padding-top: 190px;
     padding-bottom: 280px;
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
     background-image: url(../img/poaple-backgraund.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -597,7 +609,7 @@ header {
             font-size: 0px;
             position: absolute;
             top: 50%;
-            left: 0px;
+            left: 20px;
             margin: 0px;
             padding: 0px;
             width: 30px;
@@ -687,7 +699,7 @@ header {
             font-size: 0px;
             position: absolute;
             top: 50%;
-            right: 0px;
+            right: 20px;
             margin: 0px;
             padding: 0px;
             width: 30px;
@@ -764,6 +776,97 @@ header {
                 button {
                     background-color: #fff;
                 }
+            }
+        }
+    }
+}
+
+.section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f9f9fa;
+    padding-top: 100px;
+    padding-bottom: 150px;
+
+
+    h2 {
+        font-family: "Raleway";
+        font-weight: 200;
+        font-size: 60px;
+        color: #576671;
+        padding-bottom: 37px;
+        margin-bottom: 37px;
+        position: relative;
+
+        &::after {
+            content: "";
+            position: absolute;
+            width: 30px;
+            height: 1px;
+            background-color: #17daa3;
+            bottom: 0px;
+            left: 50%;
+            transform: translate(-50%, 0);
+        }
+    }
+
+    p {
+        font-family: "Proxima-Nova";
+        font-weight: 400;
+        font-size: 18px;
+        color: #87949e;
+        margin: 0px;
+        
+    }
+
+    .section__inner {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 130px;
+
+        .section__content{
+            max-width: 700px;
+            width: 50%;
+            min-width: 500px;
+            padding-left: 150px;
+            margin-top: 40px;
+            margin-bottom: 40px;
+            position: relative;
+
+            svg {
+                position: absolute;
+                top: 0px;
+                left: 0px;
+                width: 94px;
+                height: 94px;
+
+                .cls-1{
+                    fill: #fff;
+                }
+
+                .cls-2{
+                    fill: #17daa3;
+                }
+            }
+
+            h3 {
+                font-family: "Raleway";
+                font-weight: 200;
+                font-size: 60px;
+                margin-top: 10px;
+                margin-bottom: 43px;
+                color: #576671;
+            }
+
+            p {
+                font-family: "Proxima-Nova";
+                font-weight: 400;
+                font-size: 18px;
+                line-height: 48px;
+                color: #87949e;
+                padding-left: 10px;
             }
         }
     }
