--- a/app/css/desk.css
+++ b/app/css/desk.css
@@ -662,3 +662,47 @@ header {
         line-height: 48px;
         color: #87949e;
         padding-left: 10px; }
+
+.team {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100px; }
+  .team .team__title {
+    font-family: "Raleway";
+    font-weight: 200;
+    font-size: 60px;
+    color: #576671;
+    margin: 0px;
+    padding-bottom: 37px;
+    margin-bottom: 37px;
+    position: relative; }
+    .team .team__title::after {
+      content: "";
+      position: absolute;
+      width: 30px;
+      height: 1px;
+      background-color: #17daa3;
+      bottom: 0px;
+      left: 50%;
+      transform: translate(-50%, 0); }
+  .team .team__subtitle {
+    font-family: "Proxima-Nova";
+    font-weight: 400;
+    font-size: 18px;
+    color: #87949e;
+    margin: 0px; }
+  .team .team__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 110px; }
+    .team .team__list .team__section {
+      max-width: 400px;
+      width: 20%;
+      max-height: 400px;
+      overflow: hidden; }
+      .team .team__list .team__section img {
+        display: block;
+        width: 100%;
+        height: 100%; }
