--- a/app/scss/desk.scss
+++ b/app/scss/desk.scss
@@ -871,3 +871,62 @@ header {
         }
     }
 }
+
+.team {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 100px;
+
+    .team__title {
+        font-family: "Raleway";
+        font-weight: 200;
+        font-size: 60px;
+        color: #576671;
+        margin: 0px;
+        padding-bottom: 37px;
+        margin-bottom: 37px;
+        position: relative;
+
+        &::after {
+            content: "";
+            position: absolute;
+            width: 30px;
+            height: 1px;
+            background-color: #17daa3;
+            bottom: 0px;
+            left: 50%;
+            transform: translate(-50%, 0);
+        }
+    }
+
+    .team__subtitle {
+        font-family: "Proxima-Nova";
+        font-weight: 400;
+        font-size: 18px;
+        color: #87949e;
+        margin: 0px;
+    }
+
+    .team__list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 110px;
+
+        .team__section{
+            max-width: 400px;
+            width: 20%;
+            max-height: 400px;
+            overflow: hidden;
+            
+            
+
+            img {
+                display: block;
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+}
