--- a/app/css/desk.css
+++ b/app/css/desk.css
@@ -706,3 +706,98 @@ header {
         display: block;
         width: 100%;
         height: 100%; }
+
+.prising {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100px;
+  padding-bottom: 110px;
+  background-color: #f9f9fa; }
+  .prising .prising__title {
+    font-family: "Raleway";
+    font-weight: 200;
+    font-size: 60px;
+    color: #576671;
+    padding-bottom: 37px;
+    margin-top: 0px;
+    margin-bottom: 37px;
+    position: relative; }
+    .prising .prising__title::after {
+      content: "";
+      position: absolute;
+      width: 30px;
+      height: 1px;
+      background-color: #17daa3;
+      bottom: 0px;
+      left: 50%;
+      transform: translate(-50%, 0); }
+  .prising .prising__subtitle {
+    font-family: "Proxima-Nova";
+    font-weight: 400;
+    font-size: 18px;
+    color: #87949e;
+    margin: 0px; }
+  .prising .prising__inner {
+    display: flex;
+    justify-content: center;
+    margin-top: 105px; }
+    .prising .prising__inner .prising__section {
+      max-width: 345px;
+      margin-left: 15px;
+      margin-right: 15px;
+      min-height: 585px;
+      background-color: #fff;
+      position: relative; }
+      .prising .prising__inner .prising__section h3 {
+        font-family: "Raleway";
+        font-weight: 200;
+        color: #17daa3;
+        font-size: 60px;
+        padding-left: 37px;
+        margin: 0px; }
+      .prising .prising__inner .prising__section span {
+        display: inline-block;
+        font-family: "Proxima-Nova";
+        font-weight: 400;
+        font-size: 18px;
+        color: #87949e;
+        margin-top: 25px;
+        padding-left: 37px; }
+      .prising .prising__inner .prising__section p {
+        font-family: "Proxima-Nova";
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 48px;
+        color: #87949e;
+        margin-top: 60px;
+        margin-bottom: 0px;
+        padding-top: 60px;
+        padding-left: 37px;
+        padding-right: 37px;
+        position: relative; }
+        .prising .prising__inner .prising__section p::before {
+          content: "";
+          position: absolute;
+          top: 0px;
+          left: 0px;
+          width: 100%;
+          height: 2px;
+          background-color: #f9f9fa; }
+      .prising .prising__inner .prising__section button {
+        position: absolute;
+        bottom: 0px;
+        margin-top: 30px;
+        padding-left: 37px;
+        width: 100%;
+        height: 75px;
+        border: none;
+        background-color: #18daa3;
+        color: #fff;
+        font-family: "Proxima-Nova";
+        font-weight: 700;
+        text-transform: uppercase;
+        font-size: 18px;
+        letter-spacing: 7px;
+        display: flex;
+        align-items: center; }
