--- a/app/css/style.css
+++ b/app/css/style.css
@@ -856,6 +856,7 @@ header {
       max-width: 345px;
       margin-left: 15px;
       margin-right: 15px;
+      padding-top: 40px;
       min-height: 585px;
       background-color: #fff;
       position: relative; }
@@ -989,6 +990,46 @@ header {
     text-decoration: none;
     outline: none;
     border: none; }
+
+footer {
+  height: 170px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  footer h4 {
+    font-family: "Proxima-Nova";
+    font-weight: 400;
+    font-size: 18px;
+    color: #87949e;
+    margin: 0px;
+    margin-left: 25px;
+    padding-left: 25px;
+    position: relative; }
+    footer h4::before {
+      content: "";
+      position: absolute;
+      width: 26px;
+      height: 26px;
+      background-image: url("../img/footer-icon.png");
+      background-position: center;
+      background-repeat: no-repeat;
+      left: 0px;
+      top: 50%;
+      transform: translate(-50%, -50%); }
+  footer .footer__menu {
+    display: flex;
+    margin: 0px;
+    padding: 0px; }
+    footer .footer__menu li {
+      font-family: "Proxima-Nova";
+      font-weight: 400;
+      font-size: 18px;
+      color: #87949e;
+      list-style: none;
+      padding-left: 60px;
+      opacity: 0.5; }
+    footer .footer__menu .footer__menu-active {
+      opacity: 1; }
 
 @media (max-width: 768px) {
   header .navigation__logo-mobile {
