--- a/app/scss/desk.scss
+++ b/app/scss/desk.scss
@@ -978,6 +978,7 @@ header {
             max-width: 345px;
             margin-left: 15px;
             margin-right: 15px;
+            padding-top: 40px;
             min-height: 585px;
             background-color: #fff;
             position: relative;
@@ -1138,5 +1139,56 @@ header {
         text-decoration: none;
         outline: none;
         border: none;
+    }
+}
+
+footer {
+    height: 170px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    h4 {
+        font-family: "Proxima-Nova";
+        font-weight: 400;
+        font-size: 18px;
+        color: #87949e;
+        margin: 0px;
+        margin-left: 25px;
+        padding-left: 25px;
+        position: relative;
+
+        &::before {
+            content: "";
+            position: absolute;
+            width: 26px;
+            height: 26px;
+            background-image: url("../img/footer-icon.png");
+            background-position: center;
+            background-repeat: no-repeat;
+            left: 0px;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+
+    .footer__menu {
+        display: flex;
+        margin: 0px;
+        padding: 0px;
+
+        li {
+            font-family: "Proxima-Nova";
+            font-weight: 400;
+            font-size: 18px;
+            color: #87949e;
+            list-style: none;
+            padding-left: 60px;
+            opacity: 0.5;
+        }
+
+        .footer__menu-active {
+            opacity: 1;
+        }
     }
 }
